# ide

./: .clang-format  .gitignore  README.md  meson.build
res/: gresources.xml  meson.build
res/css/: main.css
src/: editor.c  editor.h  file_browser.c  file_browser.h  main.c  old.c
